tests/invalid/invalid_int.err_exp2
invalid_int.m:019: Error: the integer literal
invalid_int.m:019:   `0b10000000000000000000000000000000000000000000000000000000000000000'
invalid_int.m:019:   is too big to be represented on this machine.
invalid_int.m:024: Error: the integer literal `0o2000000000000000000000' is too
invalid_int.m:024:   big to be represented on this machine.
invalid_int.m:030: Error: the integer literal `0x10000000000000000' is too big
invalid_int.m:030:   to be represented on this machine.
invalid_int.m:035: Error: the integer literal `9223372036854775808' is too big
invalid_int.m:035:   to be represented on this machine.
